-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 14
-
Component/s: hotspot
-
b31
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8236883 | 15 | Erik Gahlin | P3 | Resolved | Fixed | b06 |
The following test failed in the JDK14 CI:
applications/dacapo/Dacapo24H.java
Here's a snippet from the log file:Stress process main method is started.
[5907.517s][warning][gc] GC locker is held; pre-dump GC was skipped
[15170.498s][warning][gc] GC locker is held; pre-dump GC was skipped
[34972.718s][warning][gc] GC locker is held; pre-dump GC was skipped
[42555.613s][warning][gc] GC locker is held; pre-dump GC was skipped
[54672.111s][warning][gc] GC locker is held; pre-dump GC was skipped
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (open/src/hotspot/share/jfr/recorder/service/jfrRecorderService.cpp:595), pid=31074, tid=31169
# assert(_chunkwriter.is_valid()) failed: invariant
#
# JRE version: Java(TM) SE Runtime Environment (14.0+28) (fastdebug build 14-ea+28-1352)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+28-1352, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xd38915][thread 14293 also had an error]
JfrRecorderService::invoke_flush()+0x715
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007fc488048000): JavaThread "JFR Recorder Thread" daemon [_thread_in_vm, id=31169, stack(0x00007fc4d05d5000,0x00007fc4d06d6000)]
Stack: [0x00007fc4d05d5000,0x00007fc4d06d6000], sp=0x00007fc4d06d4bc0, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xd38915] JfrRecorderService::invoke_flush()+0x715
V [libjvm.so+0xd391b5] JfrRecorderService::flushpoint()+0x65
V [libjvm.so+0xd3b1e8] recorderthread_entry(JavaThread*, Thread*)+0x168
V [libjvm.so+0x15a0666] JavaThread::thread_main_inner()+0x226
V [libjvm.so+0x15a5896] Thread::call_run()+0xf6
V [libjvm.so+0x12d4c96] thread_native_entry(Thread*)+0x116
applications/dacapo/Dacapo24H.java
Here's a snippet from the log file:Stress process main method is started.
[5907.517s][warning][gc] GC locker is held; pre-dump GC was skipped
[15170.498s][warning][gc] GC locker is held; pre-dump GC was skipped
[34972.718s][warning][gc] GC locker is held; pre-dump GC was skipped
[42555.613s][warning][gc] GC locker is held; pre-dump GC was skipped
[54672.111s][warning][gc] GC locker is held; pre-dump GC was skipped
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (open/src/hotspot/share/jfr/recorder/service/jfrRecorderService.cpp:595), pid=31074, tid=31169
# assert(_chunkwriter.is_valid()) failed: invariant
#
# JRE version: Java(TM) SE Runtime Environment (14.0+28) (fastdebug build 14-ea+28-1352)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+28-1352, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xd38915][thread 14293 also had an error]
JfrRecorderService::invoke_flush()+0x715
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007fc488048000): JavaThread "JFR Recorder Thread" daemon [_thread_in_vm, id=31169, stack(0x00007fc4d05d5000,0x00007fc4d06d6000)]
Stack: [0x00007fc4d05d5000,0x00007fc4d06d6000], sp=0x00007fc4d06d4bc0, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xd38915] JfrRecorderService::invoke_flush()+0x715
V [libjvm.so+0xd391b5] JfrRecorderService::flushpoint()+0x65
V [libjvm.so+0xd3b1e8] recorderthread_entry(JavaThread*, Thread*)+0x168
V [libjvm.so+0x15a0666] JavaThread::thread_main_inner()+0x226
V [libjvm.so+0x15a5896] Thread::call_run()+0xf6
V [libjvm.so+0x12d4c96] thread_native_entry(Thread*)+0x116
- backported by
-
JDK-8236883 JFR Recorder Thread crashed due to "assert(_chunkwriter.is_valid()) failed: invariant"
-
- Resolved
-
- relates to
-
JDK-8226511 Implement JFR Event Streaming
-
- Resolved
-