8236487: JFR Recorder Thread crashed due to "assert(_chunkwriter.is_valid()) failed: invariant"

Reviewed-by: mgronlun, mseledtsov